@@ -1,0 +1,6 @@
+import zeit.web.site.module
+
+
+@zeit.web.register_module('studiumbox')
+class StudiumBox(zeit.web.site.module.Module):
+    pass
